tests/cases/modules/ok/same-filename-project-main.ari
mod same_filename_project;

fn main() -> i64 {
  return same_filename_project::run();
}
