tests/cases/modules/errors/imported-parse-error-main.ari
mod imported_parse_error;

fn main() -> i64 {
  return 0;
}
